@@ -48,3 +48,8 @@ String Functions
         be found in the string *s1*.  This function will change NULL input
         values for a blank string before proceeding to call the standard
         C *strstr* function.
+
+.. cfunction:: fctstr_iincl(s1, check)
+
+        *New in FCTX 1.3.* Case insensitive version of
+        :cfunc:`fctstr_incl`.
